// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrainModal.vue add requirements renders correctly 1`] = `
<bhmodal-stub>
  <div class="train-modal">
    <h1 class="title is-3">Train Status</h1>
    <div>
      <table class="table is-fullwidth">
        <thead>
          <tr>
            <th>English is not ready to train</th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>requirement 1</td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class="train-modal__buttons level">
      <div class="level-left">
        <div class="train-modal__flags">
          <div class="train-modal__flags__item">
            <bhlanguageflag-stub></bhlanguageflag-stub>
            <bhicon-stub class="train-modal__flags__item__status train-modal__flags__item__status--ready"></bhicon-stub>
          </div>
        </div>
      </div>
      <div class="level-rigth">
        <bhbutton-stub>
          <bhicon-stub></bhicon-stub> <span>Train</span></bhbutton-stub>
      </div>
    </div>
  </div>
</bhmodal-stub>
`;

exports[`TrainModal.vue renders correctly 1`] = `
<bhmodal-stub>
  <div class="train-modal">
    <h1 class="title is-3">Train Status</h1>
    <div class="train-modal__buttons level">
      <div class="level-left">
        <div class="train-modal__flags">
          <div class="train-modal__flags__item">
            <bhlanguageflag-stub></bhlanguageflag-stub>
            <bhicon-stub class="train-modal__flags__item__status train-modal__flags__item__status--ready"></bhicon-stub>
          </div>
        </div>
      </div>
      <div class="level-rigth">
        <bhbutton-stub>
          <bhicon-stub></bhicon-stub> <span>Train</span></bhbutton-stub>
      </div>
    </div>
  </div>
</bhmodal-stub>
`;
